fix: remove overflow property from text content body

--- a/styles/TextContent.module.scss
+++ b/styles/TextContent.module.scss
@@ -26,7 +26,6 @@
   gap: 1rem;
   max-height: 75vh;
   padding: 2rem;
-  overflow: scroll;
 }
 
 @media only screen and (max-width: 768px) {
